syntax = "proto3";

message Request {
  enum Mode {
		DEFAULT = 0;
		ERROR = 1;
		SLOW = 2;
		RETRY = 3;
  }

  string id = 1;
  Mode mode = 2;
}

message Response {
  string id = 1;
}

service TestService {
  rpc unaryCall(Request) returns (Response) {}
  rpc streamResponse(Request) returns (stream Response) {}
  rpc streamRequest(stream Request) returns (Response) {}
  rpc streamBidi(stream Request) returns (stream Response) {}
}
